--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,8 +46,8 @@ a {
     --color-primary: #1523bc;
     --color-primary-hover: #0056b3;
     --color-primary-dark: #0088cc;
-    --color-secondary: #28a745;
-    --color-secondary-dark: #218838;
+    --color-secondary: #feb601;
+    --color-secondary-dark: #ea9902;
     --color-background: #fff;
     --color-background-light: #f9f8f8;
     --color-card-background: #f7f5f5;
