--- a/src/app/activity/page.module.css
+++ b/src/app/activity/page.module.css
@@ -1,25 +1,24 @@
-
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: var(--secondary-color);
-    padding: var(--padding);
+    background-color: var(--color-background-light);
+    padding: var(--spacing-lg);
 }
 
 .selectTitle {
-    font-size: 2.5rem;
-    color: var(--primary-color);
-    margin-bottom: 2rem;
+    font-size: var(--font-size-xxl);
+    color: var(--color-primary);
+    margin-bottom: var(--spacing-xl);
     text-align: center;
 }
 
 .items {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: var(--spacing-lg);
     justify-content: center;
 }
 
@@ -30,8 +29,8 @@
     justify-content: center;
     width: 200px;
     height: 300px;
-    background-color: #fff;
-    border-radius: var(--border-radius);
+    background-color: var(--color-card-background);
+    border-radius: var(--border-radius-md);
     box-shadow: var(--box-shadow);
     transition: transform var(--transition-duration), box-shadow var(--transition-duration);
     text-decoration: none;
@@ -41,7 +40,7 @@
 
 .item:hover {
     transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--box-shadow-hover);
 }
 
 .imageWrapper {
@@ -63,8 +62,8 @@
 }
 
 .title {
-    font-size: 1.5rem;
-    color: var(--text-color);
+    font-size: var(--font-size-lg);
+    color: var(--color-text);
     text-align: center;
-    margin-top: 10px;
+    margin-top: var(--spacing-md);
 }
