--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -22,14 +22,13 @@
   display: flex;
   flex-direction: column;
   background-color: var(--background-color);
-  border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
 }
 
 /* En-tête du dashboard */
 .dashboardHeader {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-bottom: 20px;
   padding-bottom: 10px;
