--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,16 +1,15 @@
 .container {
     position: relative;
-    /* width: 100%;
+    width: 100%;
     height: 100vh;
-    min-height: 600px;
-    overflow: hidden; */
+    overflow: hidden;
 }
 
 .headerImage {
     position: relative;
     width: 100%;
     height: 100%;
-    
+
 }
 
 .img {
@@ -64,10 +63,13 @@
 @media (min-width: 768px) {
     .title {
         font-size: 3.5rem;
+        color: beige;
     }
 
     .subtitle {
         font-size: 2rem;
+        color: beige;
+
     }
 }
 
